<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="night_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="yandex">https://yandex.ru/legal/practicum_offer/</string>
    <string name="text_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="theme_mail">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_text">Стань Android-разработчиком: https://praktikum.yandex.ru/android-developer/</string>
    <string name="share_subject">Android Development Course</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="problems">Проблемы со связью</string>
    <string name="connection_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="mail">paramo93@bk.ru</string>
    <string name="youSearched">Вы искали</string>
    <string name="clearStory">Очистить историю</string>
    <string name="url_iTunes">https://itunes.apple.com</string>
    <string name="audioplayer_year_text">Год</string>
    <string name="audioplayer_genre_text">Жанр</string>
    <string name="audioplayer_country_text">Страна</string>
    <string name="audioplayer_album_text">Альбом</string>
    <string name="audioplayer_duration_name">Длительность</string>
    <string name="audioplayer_pause_description">pause</string>
    <string name="audioplayer_backButton_description">back</string>
    <string name="audioplayer_trackImage_description">trackImage</string>
    <string name="audioplayer_playlist_description">playlist</string>
    <string name="audioplayer_pauseButton_description">pause</string>
    <string name="null_time_track_duration">0:00</string>
</resources>