<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:background="@color/blue_background_main"
    android:fitsSystemWindows="true"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="start"
        android:textColor="#ffffff"
        android:textSize="20sp"

        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:icon="@drawable/lupa"
            app:iconSize="24dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_color"
            android:id="@+id/search"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:icon="@drawable/music"
            app:iconSize="20dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_color"
            android:id="@+id/media"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            app:cornerRadius="16dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:id="@+id/settings"
            android:textSize="22sp"
            app:icon="@drawable/settings"
            app:iconSize="20dp"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/icon_color"
            />
    </LinearLayout>

</LinearLayout>