<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="18dp"
            android:id="@+id/back"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="12dp"

            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_theme"
                android:layout_marginStart="12dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                android:textSize="16sp"
                >
            </TextView>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginRight="18dp"
                android:layout_gravity="end"
                />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_marginVertical="@dimen/text_margin_horizontal"
                android:textSize="@dimen/text_size"
                >
            </TextView>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/icon_margin_end"
                android:layout_marginTop="@dimen/icon_margin_top"
                android:src="@drawable/share" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_marginVertical="@dimen/text_margin_horizontal"
                android:textSize="@dimen/text_size"
                >
            </TextView>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/icon_margin_end"
                android:layout_marginTop="@dimen/icon_margin_top"
                android:src="@drawable/support" />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_agreement"
                android:layout_marginStart="@dimen/text_margin_start"
                android:layout_marginVertical="@dimen/text_margin_horizontal"
                android:textSize="@dimen/text_size">
            </TextView>
            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/icon_margin_end"
                android:layout_marginTop="@dimen/icon_margin_top"
                android:src="@drawable/right_arrow" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>